# image-caption

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  noxfile.py  pyproject.toml  requirements.txt
.github/actions/setup-python-env/: action.yaml
.github/workflows/: deploy-to-hf.yaml  lint-and-format.yaml
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
src/: __init__.py
src/docs/source/: index.md
src/image_caption/configs/: vit_gpt2.yaml
src/image_caption/notebooks/: Final_Image_Captionion_using_VIT_GPT2_trained_submission.ipynb
src/image_caption/scripts/: app.py  cli.py  make_dataset.py  predict_model.py  train_model.py  utils.py
src/image_caption/tests/: __init__.py  test_training.py
src/imagecaption/: __init__.py
src/imagecaption/configs/: vit_gpt2.yaml
src/imagecaption/notebooks/: Final_Image_Captionion_using_VIT_GPT2_trained_submission.ipynb  Image_captioning.ipynb
src/imagecaption/scripts/: config.py  make_dataset.py  train_model.py  utils.py
tests/: test_training.py
