[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "imagecaption"
version = "0.0.1"
description = "Image captioning using VIT and GPT2"
authors = [
  { name = "Harnoor Rangi", email = "harnoorrangi@hotmail.com" },
]

readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
pre-commit = ["pre-commit >= 3.5.0"]
testing = ["pytest >= 7.4.3"]
linting = ["ruff >= 0.1.3"]
docs = [
  "mkdocs <= 1.5.3",
  "mkdocs-material <= 9.4.6",
  "mkdocstrings <= 0.23.0",
  "mkdocstrings[python] >= 0.18"
]

[tool.ruff]
line-length = 120
