
[project]
name = "imagecaption"
version = "0.0.1"
description = "Image captioning using VIT and GPT2"
authors = [
  { name = "Harnoor Rangi", email = "harnoorrangi@hotmail.com" },
]

readme = "README.md"
requires-python = "==3.10.14"
dependencies = [
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "torch==2.0.1",
    "torchvision>=0.15.2",
]

[project.scripts]
example-pkg = "example_packaged_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
pre-commit = ["pre-commit >= 3.5.0"]
testing = ["pytest >= 7.4.3"]
linting = ["ruff >= 0.1.3"]
docs = [
  "mkdocs <= 1.5.3",
  "mkdocs-material <= 9.4.6",
  "mkdocstrings <= 0.23.0",
  "mkdocstrings[python] >= 0.18"
]

[tool.ruff]
line-length = 120
