[project]
name = "image_caption"
version = "0.0.1"
description = "Image captioning using VIT and GPT2"
authors = [
  { name = "Harnoor Rangi", email = "harnoorrangi@hotmail.com" },
]

readme = "README.md"
requires-python = "==3.10.14"
dependencies = [
    "cmake>=3.31.1",
    "coverage>=7.6.10",
    "dataclasses>=0.8",
    "datasets>=3.2.0",
    "dvc>=3.58.0",
    "dvc-gdrive>=3.0.1",
    "evaluate>=0.4.3",
    "hydra-core>=1.3.2",
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "matplotlib>=3.9.3",
    "mlflow>=2.19.0",
    "mypy>=1.13.0",
    "numpy<2",
    "pandas>=2.2.3",
    "pillow>=11.0.0",
    "pip>=24.3.1",
    "pyarrow<18.0.0",
    "pytest>=8.3.3",
    "pytorch-lightning>=2.3.3",
    "pyyaml>=6.0.2",
    "rouge-score>=0.1.2",
    "scikit-learn>=1.5.2",
    "tensorflow-macos==2.12.0",
    "torch==2.0.1",
    "torchvision>=0.15.2",
    "transformers==4.46.3",
    "typer>=0.15.1",
    "typing>=3.10.0.0",    
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest >= 7.4.3",
    "ruff >= 0.1.3"
]

[project.scripts]
imagecaptioncli = "image_caption.scripts.cli:app"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I"]


